# habr_parse

./: README.md  pyproject.toml
src/: __main__.py
src/parse_news/: handler.py  parse_data.py  parse_urls.py  test.py  utils.py
