[tool.poetry]
name = "habr_parse"
version = "0.1.0"
description = ""
authors = ["smapl"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.24.0"
bs4 = "^0.0.1"
pymongo = "^3.11.0"
tqdm = "^4.49.0"
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
